@@ -3,6 +3,7 @@
 ** Unreleased
 
 *** Added:
+  - Open configured files on Emacs load without =desktop-save-mode= state.
   - Command to exit =Emacs= and reset =desktop-save-mode= state.
   - Confirm before killing non-empty =*scratch*= buffer.
   - Keybinding to toggle =scroll-lock-mode=.
